--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+opx-tmpctl (2.1.0) unstable; urgency=medium
+
+  * Update: Conform to systemd, use sd_notify()
+
+ -- Dell EMC <ops-dev@lists.openswitch.net>  Fri, 28 Apr 2017 16:00:00 -0800
+
 opx-tmpctl (1.0.1) unstable; urgency=medium
 
   * Initial release.
