--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+opx-tmpctl (2.1.1) unstable; urgency=medium
+
+  * Bugfix: Use entire CPS API keys in comparisons, don't extract subcategories
+
+ -- Dell EMC <ops-dev@lists.openswitch.net>  Mon, 16 Oct 2017 11:00:00 -0800
+
 opx-tmpctl (2.1.0) unstable; urgency=medium
 
   * Update: Conform to systemd, use sd_notify()
